update in tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,11 +18,11 @@
     "noEmit": true,
     "jsx": "react-jsx",
 
-    /* Linting */
+    // /* Linting */
     "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
+    "noFallthroughCasesInSwitch": false
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
