--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "moment": "^2.30.1",
     "next-themes": "^0.3.0",
     "react": "^18.2.0",
+    "react-color": "^2.19.3",
     "react-data-table-component": "^7.6.2",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.2",
@@ -42,6 +43,7 @@
   "devDependencies": {
     "@types/node": "^20.11.30",
     "@types/react": "^18.2.66",
+    "@types/react-color": "^3.0.12",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
