--- a/package.json
+++ b/package.json
@@ -21,21 +21,25 @@
     "@reduxjs/toolkit": "^2.2.2",
     "@tanstack/react-query": "^5.28.9",
     "axios": "^1.6.8",
+    "chart.js": "^4.4.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "lucide-react": "^0.363.0",
     "moment": "^2.30.1",
     "next-themes": "^0.3.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-color": "^2.19.3",
     "react-data-table-component": "^7.6.2",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
+    "react-qr-code": "^2.0.12",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
     "sonner": "^1.4.41",
+    "swiper": "^11.1.0",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "yup": "^1.4.0",
