--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@react-google-maps/api": "^2.19.3",
     "@reduxjs/toolkit": "^2.2.2",
     "@tanstack/react-query": "^5.28.9",
     "axios": "^1.6.8",
